Fixed padding on form to position better on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ header>a {
 
 form {
     text-align: right;
-    font-size: 120%;
+    font-size: 150%;
     color: blue;
     padding-right: 40%;
     padding-top: 5%;
@@ -231,6 +231,11 @@ main {
     ul {
         text-align: center;
         display: flex;
-        justify-content: space-evenly
+        justify-content: space-evenly;
+    }
+
+    form {
+        padding-right: 20%;
+        padding-top: 32%;
     }
 }
